--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.17.0
+  drift: ^2.21.0
+  drift_flutter: ^0.1.0
+  sqlite3_flutter_libs: ^0.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,7 +43,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  drift_dev: ^2.21.0
+  build_runner: ^2.4.13
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
