--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   drift: ^2.21.0
   drift_flutter: ^0.1.0
   sqlite3_flutter_libs: ^0.5.0
+  path_provider: ^2.0.14
+  path: ^1.8.3
 
 
   # The following adds the Cupertino Icons font to your application.
