--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.0
   path_provider: ^2.0.14
   path: ^1.8.3
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
