--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,9 +6,6 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
-dependencies {
-    implementation platform('com.google.firebase:firebase-bom:33.6.0')
-}
 
 android {
     namespace = "com.asu.hedieaty"
@@ -29,7 +26,7 @@ android {
         applicationId = "com.asu.hedieaty"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
