--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   shared_preferences: ^2.0.8
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.2
+  image_picker: ^1.1.2
+  http: ^1.2.2
+  flutter_dotenv: ^5.2.1
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +79,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - images/
+   - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
