--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,9 +6,13 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
+dependencies {
+    implementation platform('com.google.firebase:firebase-bom:33.7.0')
+}
+
 
 android {
-    namespace = "com.asu.hedieaty"
+    namespace = "com.sakr.hedieaty"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = "25.1.8937393"
 
@@ -23,7 +27,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.asu.hedieaty"
+        applicationId = "com.sakr.hedieaty"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 23
